# sc-leflib

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml  wheels.yml
lef/: README.md
sc_leflib/: __init__.py  _leflib.pxd  _leflib.pyx
tests/: conftest.py  test_leflib.py
